<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Corresponsal Bancolombia</string>
    <string name="editText_Email">Usuario</string>
    <string name="editText_password">Contraseña</string>
    <string name="btnLogin">Inicio</string>
    <string name="textView_Password">Olvidé mi contraseña</string>
    <string name="textView_CambiarContrasena">Cambiar mi contraseña</string>
    <string name="textView_Dudas">¿Tienes dudas?</string>
    <string name="radioButtonCorriente">Corriente</string>
    <string name="radioButtonAhorros">Ahorros</string>
    <string name="editTextNumeroDeCuenta">Ingrese el número de la cuenta</string>
    <string name="editTextValorDeposito">Ingrese el valor a depositar</string>
    <string name="buttonAceptar">Aceptar</string>
    <string name="textView_Menu">¿Qué es esto?</string>
    <string name="textView_Saludo">¡Hola!</string>
    <string name="textView_Bienvenida">Bienvenido a Corresponsal Bancolombia.</string>
    <string name="button_Giros">Giros</string>
    <string name="button_ConsultaSaldo">Consulta de saldo</string>
    <string name="button_Transferencia">Transferencia</string>
    <string name="button_PagoProductos">Pago de productos</string>
    <string name="button_PagoFacturas">Pago de facturas</string>
    <string name="button_Duplicado">Duplicado</string>
    <string name="button_Deposito">Depósito</string>
    <string name="button_Retiro">Retiro</string>
    <string name="button_Recargas">Recargas</string>
    <string name="textView_GirosInicial">Desde aquí puedes enviar, reclamar y cancelar giros.</string>
    <string name="button_Giros_Enviar">Enviar</string>
    <string name="button_Giros_Reclamar">Reclamar</string>
    <string name="button_Giros_Cancelar">Cancelar</string>
    <string name="button_Giros_Salir">Salir</string>
    <string name="textView_GirosEnviar">Ingrese la cantidad que va a girar.</string>
    <string name="editText_CantidadGirosEnviar">Cantidad</string>
    <string name="button_ContinuarGirosEnviar">Continuar</string>
    <string name="textView_DatosGiradorEnviarGiro">Ingrese los datos del girador.</string>
    <string name="dropList_TipoDocumentoEnviarGiro">Tipo de Documento</string>
    <string name="editText_DocumentoEnviarGiro">Número de Documento</string>
    <string name="editText_NumeroDeCelularEnviarGiro">Número de Celular</string>
    <string name="button_ContinuarDatosGiradorEnviarGiro">Continuar</string>
    <string name="textView_DatosBeneficiarioEnviarGiro">Ingrese los datos del beneficiario.</string>
    <string name="dropList_TipoDocumentoBeneficiarioEnviarGiro">Tipo de Documento</string>
    <string name="editText_DocumentoBeneficiarioEnviarGiro">Número de Documento</string>
    <string name="editText_NumeroDeCelularBeneficiarioEnviarGiro">Número de Celular</string>
    <string name="button_ContinuarDatosBeneficiarioEnviarGiro">Continuar</string>
    <string name="textView_DatosBeneficiarioReclamarGiro">Ingrese los datos del Beneficiario.</string>
    <string name="dropList_TipoDocumentoBeneficiarioReclamarGiro">Tipo de Documento</string>
    <string name="editText_DocumentoBeneficiarioReclamarGiro">Número de Documento</string>
    <string name="editText_MontoReclamarGiro">Monto</string>
    <string name="button_ContinuarDatosBeneficiarioReclamarGiro">Continuar</string>
    <string name="textView_NumeroReferenciaReclamarGiro">Ingrese el número de referencia del giro.</string>
    <string name="editText_NumeroReferenciaReclamarGiro">Número de referencia</string>
    <string name="button_VamosNumeroReferenciaReclamarGiro">¡Vamos!</string>
    <string name="textView_CancelarGiroDatosGirador">Ingrese los datos del depositante.</string>
    <string name="editText_CancelarGiroNumeroDocumentoGirador">Número de documento</string>
    <string name="button_CancelarGirosDatosGiradorContinuar">Continuar</string>
    <string name="textView_CancelarGiroDatosBeneficiario">Ingrese los datos del beneficiario.</string>
    <string name="editText_CancelarGiroNumeroDocumentoBeneficiario">Número de documento</string>
    <string name="button_CancelarGirosDatosBeneficiarioContinuar">Continuar</string>
    <string name="textView_CancelarGiroPinReferencia">Ingrese el pin de referencia.</string>
    <string name="editText_CancelarGiroPinReferencia">Pin de referencia</string>
    <string name="button_CancelarGirosPinReferenciaContinuar">Continuar</string>
    <string name="textView_CancelarGiroCantidadDescripcion">Verifique la cantidad del giro.</string>
    <string name="textView_TituloCantidadGiro"><b>Cantidad</b></string>
    <string name="button_CancelarGiroCantidadContinuar">Continuar</string>
    <string name="textView_DepositoDatosDepositante">Ingrese los datos del depositante.</string>
    <string name="editText_DepositoDatosDepositanteNumeroCuenta">Número de cuenta</string>
    <string name="editText_DepositoDatosDepositanteCantidad">Cantidad de depósito</string>
    <string name="button_DepositoDatosDepositanteContinuar">Continuar</string>
    <string name="textView_PagoProductosBCOInicial">Pago tus productos del banco</string>
    <string name="button_PagoProductosBCOInicialCartera">Cartera</string>
    <string name="button_PagoProductosBCOTarjetaDeCredito">Tarjeta de crédito</string>
    <string name="textView_CarteraNumeroPagare">Ingrese el número de pagaré</string>
    <string name="editText_CarteraNumeroPagare">Numero de pagaré</string>
    <string name="editText_CarteraCantidad">Cantidad</string>
    <string name="button_CarteraNumeroPagareContinuar">Continuar</string>
    <string name="textView_TarjetaDeCreditoPagoProductosBCO">Ingrese número de tarjeta y cantidad que va a pagar.</string>
    <string name="editText_TarjetaDeCreditoPagoProductosBCONumero">Numero de tarjeta</string>
    <string name="editText_TarjetaDeCreditoPagoProductosBCOCantidad">Cantidad a pagar</string>
    <string name="button_TarjetaDeCreditoPagoProductosBCOContinuar">Continuar</string>
    <string name="textView_PagoFacturasInicial">Paga de tres maneras diferentes.</string>
    <string name="button_PagoFacturasInicialManual">Manual</string>
    <string name="button_PagoFacturasInicialEmpresarial">Empresarial</string>
    <string name="button_PagoFacturasInicialCodigoBarras">Código de barras</string>
    <string name="textView_PagoFacturasManual">Selecciona el tipo de pago</string>
    <string name="button_PagoFacturasManualConvenio">Código de convenio</string>
    <string name="button_PagoFacturasManualRecaudadora">Cuenta Recaudadora</string>
    <string name="textView_PagoFacturasManualConvenio">Ingrese código de convenio, y número de referencia.</string>
    <string name="editText_PagoFacturasManualCodigoConvenio">Código de convenio</string>
    <string name="editText_PagoFacturasManualNumeroReferencia">Número de referencia</string>
    <string name="button_PagoFacturasManualContinuar">Continuar</string>
    <string name="textView_PagoFacturasManualCuentaRecaudadora">Ingrese código de convenio, y número de referencia.</string>
    <string name="editText_PagoFacturasManualNumeroCuentaRecaudadora">Cuenta recaudadora</string>
    <string name="editText_PagoFacturasManualCuentaRecaudadoraNumeroReferencia">Número de referencia</string>
    <string name="button_PagoFacturasManualCuentaRecaudadoraVamos">¡Vamos!</string>
    <string name="textView_PantallaInicialRetiro">Selecciona el tipo de pago.</string>
    <string name="button_PantallaInicialRetiroConTarjeta">Con tarjeta</string>
    <string name="button_PantallaInicialRetiroSinTarjeta">Sin tarjeta</string>
    <string name="textView_RetiroSinTarjetaCantidad">Ingrese la cantidad a retirar.</string>
    <string name="editText_RetiroSinTarjetaCantidad">Cantidad</string>
    <string name="editText_RetiroSinTarjetaNumeroCuenta">Número de cuenta</string>
    <string name="button_RetiroSinTarjetaContinuar">Continuar</string>
    <string name="textView_RetiroSinTarjetaPin">Ingrese el pin para continuar la transacción.</string>
    <string name="editText_RetiroSinTarjetaPin">Pin</string>
    <string name="button_RetiroSinTarjetaPinVamos">¡Vamos!</string>
    <string name="button_BuscarDispositivoAjusterUsuarioComun">Buscar dispositivos</string>
    <string name="button_ContinuarConfirmarValores">Continuar</string>
    <string name="textView_terminos">*Terminos y condiciones</string>
    <string name="textView_RecargasCelular">Ingrese el número del Nequi a recargar</string>
    <string name="editText_RecargasCelular">Celular</string>
    <string name="button_RecargasContinuar">Continuar</string>
    <string name="textView_RecargasCantidad">Ingrese la cantidad</string>
    <string name="editText_RecargasCantidad">Cantidad</string>
    <string name="button_RecargasVamos">¡Vamos!</string>
    <string name="button_tipoDeUsuarioOperado">Operador</string>
    <string name="button_tipoDeUsuarioAdmin">Admin</string>
    <string name="textView_pantallaRetiroConTarjetaCantidad">Ingrese la cantidad a retirar.</string>
    <string name="editText_pantallaRetiroConTarjetaCantidad">Cantidad</string>
    <string name="button_pantallaRetiroConTarjetaCantidadContinuar">Continuar</string>
    <string name="textView_pantallaRetiroConTarjetaLoader">Inserte, deslice o acerque la tarjeta.</string>
    <string name="textView_pantallaRetiroConTarjetaTipoDeCuenta">Seleccione el tipo de cuenta.</string>
    <string name="editText_pantallaRetiroConTarjetaTipoDeCuentaOtraCuenta">Número otra cuenta</string>
    <string name="button_pantallaRetiroConTarjetaTipoDeCuentaContinuar">Continuar</string>
    <string name="textView_PopUp">¡Dispositivo desconectado!</string>
    <string name="button_PopUpContinuar"> Continuar</string>
    <string name="button_PopUpSalir">Salir</string>
    <string name="button_PopUpIntentarNuevamente">Intentar nuevamente</string>
    <string name="textView_pantallaAdministracionUsuario">Cree, borre, edite o muestre la lista de sus usuarios facilmente.</string>
    <string name="button_pantallaAdministracionUsuarioCrear">Crear</string>
    <string name="button_pantallaAdministacionUsuarioEditar">Editar</string>
    <string name="button_pantallaAdministacionUsuarioEliminar">Eliminar</string>
    <string name="button_pantallaAdministracionUsuarioListar">Lista de Usuarios</string>
    <string name="textView_SaludoAdministrado">¡Hola Admin!</string>
    <string name="textView_bienvenidaAdministrador">Bienvenido a Pygree la app corresponsal de Bancolombia</string>
    <string name="button_pantallaInformacionPreguntasFrecuentes">FAQ</string>
    <string name="button_pantallaInformacionSoporte">Soporte</string>
    <string name="button_pantallaInformacionDuplicado">Duplicado</string>
    <string name="button_pantallaInformacionCerrarSesion">Cerrar sesión</string>
    <string name="textView_Cupo">El cupo de la tarjeta es:</string>
    <string name="textView_saldoPygree">Saldo de Pygree</string>
    <string name="tetxtView_Duplicado">Selecione de que comprobante ecesita duplicado.</string>
    <string name="button_ultimoRecibo">Ultimo recibo</string>
    <string name="button_otroRecibo">Otro recibo</string>
    <string name="textView_pantallaConsultaSaldoLectura">Ingrese o pase la tarjeta para consultar el saldo.</string>
    <string name="textView_pantallaConsultaSaldoCuenta">Seleccione el tipo de cuenta.</string>
    <string name="button_pantallaConsultaSaldoCCuentaContinuar">Continuar</string>
    <string name="textView_pantallaTransferenciaLectura">Ingrese o pase la tarjeta para transferir.</string>
    <string name="textView_pantallaTransferenciaTipoCuenta">Seleccione tipo de cuenta y tipo de cuenta destino.</string>
    <string name="textView_PopUpRecuperarContrasenaTitulo">Recuperar contraseña</string>
    <string name="textView_PopUpRecuperarContrasena">Ingrese el usuario.</string>
    <string name="button_PopUpRecuperarContrasenaAceptar">Aceptar</string>
    <string name="button_PopUpRecuperarContrasenaCancelar">Cancelar</string>
</resources>