<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.com.netcom.corresponsal.pantallas.corresponsal.usuarioComun.transacciones.inicio.informacion.pantallaInformacionUsuarioComun">

    <FrameLayout
        android:id="@+id/contenedorHeaderPantallaInformacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@id/contenedorHeaderPantallaInformacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/azul"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:text="@string/textView_SaludoAdministrado"
                />
            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:textColor="@color/azul"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="19dp"
                android:text="@string/textView_bienvenidaAdministrador"
                android:layout_marginStart="36dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="42dp"
                >

                <Button
                    android:id="@+id/button_preguntasFrecuentes"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="117dp"
                    android:background="@drawable/input_form"
                    android:text="@string/button_pantallaInformacionPreguntasFrecuentes"
                    android:textSize="19dp"
                    android:drawableTop="@drawable/interrogacion"
                    android:paddingTop="25dp"
                    android:paddingBottom="15dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/azul"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:id="@+id/button_soporte"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="117dp"
                    android:background="@drawable/input_form"
                    android:textColor="@color/azul"
                    android:text="@string/button_pantallaInformacionSoporte"
                    android:textAllCaps="false"
                    android:textSize="19dp"
                    android:layout_marginEnd="36dp"
                    android:drawableTop="@drawable/soporte"
                    android:paddingTop="25dp"
                    android:paddingBottom="17dp"
                    android:fontFamily="@font/quicksand_bold"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/button_duplicadoRecibo"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:background="@drawable/input_form"
                android:textAllCaps="false"
                android:drawableTop="@drawable/duplicado"
                android:textSize="19dp"
                android:fontFamily="@font/quicksand_bold"
                android:paddingTop="25dp"
                android:paddingBottom="15dp"
                android:text="@string/button_pantallaInformacionDuplicado"
                android:textColor="@color/azul"/>

            <Button
                android:id="@+id/button_cerrarSesion"
                android:layout_width="161dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="38dp"
                android:background="@drawable/boton_inicio"
                android:textColor="@color/blanco"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="20dp"
                android:text="@string/button_pantallaInformacionCerrarSesion"
                android:textAllCaps="false"
                />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>