<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginEnd="60dp"
    android:layout_marginTop="20dp"
    android:padding="20dp"
    android:background="@drawable/fondo_pop_up"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/textView_PopUpRecuperarContrasenaTitulo"
            android:layout_marginTop="10dp"
            android:textColor="@color/azul"
            android:textSize="23dp"
            android:fontFamily="@font/quicksand_bold"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_PopUpRecuperarContrasenaUsuario"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/input_form"
            android:layout_marginTop="30dp"
            android:hint="@string/textView_PopUpRecuperarContrasena"
            android:textColorHint="@color/azul"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="19dp"
            android:inputType="text"
            android:textColor="@color/azul"
            android:imeOptions="actionDone"/>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    >
        <Button
            android:clickable="true"
            android:id="@+id/button_PopUpRecuperarContrasenaCancelar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:background="@drawable/boton_inicio"
            android:text="@string/button_PopUpRecuperarContrasenaCancelar"
            android:textSize="19dp"
            android:fontFamily="@font/quicksand_regular"
            android:layout_gravity="center_horizontal"
            />

            <Button
                android:clickable="true"
                android:id="@+id/button_PopUpRecuperarContrasenaAceptar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:textAllCaps="false"
                android:textColor="@color/blanco"
                android:background="@drawable/boton_inicio"
                android:text="@string/button_PopUpRecuperarContrasenaAceptar"
                android:textSize="19dp"
                android:fontFamily="@font/quicksand_regular"
                android:layout_gravity="center_horizontal"
                />
</LinearLayout>




    </LinearLayout>

</RelativeLayout>