<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.corresponsal.usuarioComun.transacciones.pagoFacturas.manual.manualConvenio.pantallaPagoFacturasManualConvenio"
    android:background="@drawable/fondo"
    android:layout_gravity="center_horizontal"
    >

    <FrameLayout
        android:id="@+id/contenedorHeaderPagoFacturasManualConvenio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@id/contenedorHeaderPagoFacturasManualConvenio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
            
            <TextView
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:textColor="@color/azul"
                android:textSize="21dp"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/textView_PagoFacturasManualConvenio"
                android:layout_marginStart="36dp"
                android:layout_marginTop="38dp"/>

            <EditText
                android:id="@+id/editText_PagoFacturasManualCodigoConvenio"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/input_form"
                android:inputType="number"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="45dp"
                android:layout_marginTop="101dp"
                android:hint="@string/editText_PagoFacturasManualCodigoConvenio"
                android:textColorHint="@color/azul"
                android:gravity="center"
                android:textSize="21dp"
                android:fontFamily="@font/quicksand_regular"/>

            <EditText
                android:id="@+id/editText_PagoFacturasManualNumeroReferencia"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/input_form"
                android:inputType="number"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="45dp"
                android:layout_marginTop="13dp"
                android:hint="@string/editText_PagoFacturasManualNumeroReferencia"
                android:textColorHint="@color/azul"
                android:gravity="center"
                android:textSize="21dp"
                android:fontFamily="@font/quicksand_regular"/>

            <Button
                android:id="@+id/button_PagoFacturasManualConvenioContinuar"
                android:layout_width="138dp"
                android:layout_height="67dp"
                android:background="@drawable/boton_inicio"
                android:textAllCaps="false"
                android:textColor="@color/blanco"
                android:text="@string/button_PagoFacturasManualContinuar"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="20dp"
                android:layout_marginTop="112dp"
                android:layout_gravity="center_horizontal"
                android:onClick="pagoFacturasManualConvenioContinuar"/>
        </LinearLayout>



    </ScrollView>


</RelativeLayout>