<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.com.netcom.corresponsal.pantallas.corresponsal.administrador.inicio.pantallaDuplicado">

   <FrameLayout
       android:id="@+id/contenedorHeaderDuplicado"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
         android:orientation="vertical">

         <TextView
            android:layout_marginTop="40dp"
            android:layout_marginStart="36dp"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
            android:textColor="@color/azul"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/tetxtView_Duplicado"
            android:textSize="19dp"/>
         
      <Button
          android:id="@+id/button_UltimoRecibo"
          android:layout_width="match_parent"
          android:layout_height="117dp"
          android:layout_marginTop="90dp"
         android:layout_marginEnd="36dp"
         android:layout_marginStart="36dp"
         android:background="@drawable/input_form"
         android:drawableTop="@drawable/ultimo_recibo"
         android:text="@string/button_ultimoRecibo"
         android:paddingTop="25dp"
         android:textAllCaps="false"
         android:textColor="@color/azul"
         android:fontFamily="@font/quicksand_bold"
         android:textSize="19dp"
         android:paddingBottom="15dp"/>

         <Button
            android:id="@+id/button_OtroRecibo"
             android:layout_marginEnd="36dp"
             android:layout_marginStart="36dp"
             android:layout_width="match_parent"
             android:layout_height="117dp"
             android:background="@drawable/input_form"
            android:layout_marginTop="12dp"
            android:drawableTop="@drawable/recibo"
            android:textSize="19dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/button_otroRecibo"
            android:textAllCaps="false"
            android:textColor="@color/azul"
            android:paddingBottom="15dp"
            android:paddingTop="25dp"/>
         
         
      </LinearLayout>
   </ScrollView>

</RelativeLayout>