<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutPopUpContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/input_form"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="40dp"
                android:text="@string/textView_PopUp"
                android:textColor="@color/azul"
                android:textSize="22dp"
                android:fontFamily="@font/quicksand_bold"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                >

                <Button
                    android:onClick="salirPopUp"
                    android:id="@+id/button_PopUpSalir"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco"
                    android:background="@drawable/boton_inicio"
                    android:text="@string/button_PopUpSalir"
                    android:textSize="19dp"
                    android:fontFamily="@font/quicksand_regular"
                    />

                <Button
                    android:onClick="continuarPopUp"
                    android:id="@+id/button_PopUpContinuar"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco"
                    android:background="@drawable/boton_inicio"
                    android:text="@string/button_PopUpContinuar"
                    android:textSize="19dp"
                    android:fontFamily="@font/quicksand_regular"
                    />


            </LinearLayout>

        </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>